[gd_scene load_steps=9 format=3 uid="uid://tcw2mmfv8vct"]

[ext_resource type="Script" uid="uid://ci5bfb56hxyc" path="res://Scenes/Main/parts/OS/Taskbar/taskbar.gd" id="1_eg3xy"]
[ext_resource type="PackedScene" uid="uid://btadhfwtptr10" path="res://Scenes/Main/parts/OS/Taskbar/parts/TaskbarLiveItem/TaskbarLiveItem.tscn" id="2_nyp1d"]
[ext_resource type="PackedScene" uid="uid://cieqo2p3d5xly" path="res://Scenes/Main/parts/OS/Taskbar/parts/MediaPlayer/MediaPlayer.tscn" id="3_7up16"]
[ext_resource type="PackedScene" uid="uid://dqoykb187y44p" path="res://Scenes/Main/parts/OS/Taskbar/parts/TimeAndSettings/TimeAndSettings.tscn" id="5_nn734"]
[ext_resource type="PackedScene" uid="uid://diewdd1a4yfp1" path="res://Components/BtnControls/BtnControls.tscn" id="5_nyp1d"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_ndu48"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_k7mft"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_nyp1d"]
bg_color = Color(0.220654, 0.244283, 0.331351, 1)
shadow_offset = Vector2(0, 2)

[node name="Taskbar" type="PanelContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_styles/panel = SubResource("StyleBoxEmpty_ndu48")
script = ExtResource("1_eg3xy")

[node name="TaskbarControl" type="Control" parent="."]
layout_mode = 2

[node name="PanelContainer" type="PanelContainer" parent="TaskbarControl"]
custom_minimum_size = Vector2(0, 100)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxEmpty_k7mft")

[node name="MarginContainer" type="MarginContainer" parent="TaskbarControl/PanelContainer"]
layout_mode = 2
size_flags_vertical = 0
theme_override_constants/margin_top = 0
theme_override_constants/margin_bottom = 100

[node name="PanelContainer" type="PanelContainer" parent="TaskbarControl/PanelContainer/MarginContainer"]
custom_minimum_size = Vector2(0, 100)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_nyp1d")

[node name="MarginContainer" type="MarginContainer" parent="TaskbarControl/PanelContainer/MarginContainer/PanelContainer"]
layout_mode = 2
theme_override_constants/margin_right = 120

[node name="HBoxContainer" type="HBoxContainer" parent="TaskbarControl/PanelContainer/MarginContainer/PanelContainer/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 2

[node name="LeftContainer" type="HBoxContainer" parent="TaskbarControl/PanelContainer/MarginContainer/PanelContainer/MarginContainer/HBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 2

[node name="DesktopBtn" parent="TaskbarControl/PanelContainer/MarginContainer/PanelContainer/MarginContainer/HBoxContainer/LeftContainer" instance=ExtResource("2_nyp1d")]
layout_mode = 2
hint_title = "HINT"
hint_description = "Return to desktop."

[node name="RunningTasks" type="HBoxContainer" parent="TaskbarControl/PanelContainer/MarginContainer/PanelContainer/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 2

[node name="RightContainer" type="HBoxContainer" parent="TaskbarControl/PanelContainer/MarginContainer/PanelContainer/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 50
alignment = 2

[node name="TimeAndSettings" parent="TaskbarControl/PanelContainer/MarginContainer/PanelContainer/MarginContainer/HBoxContainer/RightContainer" instance=ExtResource("5_nn734")]
visible = false
layout_mode = 2
size_flags_horizontal = 3
alignment = 1

[node name="MediaPlayer" parent="TaskbarControl/PanelContainer/MarginContainer/PanelContainer/MarginContainer/HBoxContainer/RightContainer" instance=ExtResource("3_7up16")]
layout_mode = 2

[node name="BtnControl" parent="." instance=ExtResource("5_nyp1d")]
layout_mode = 2
include_blackbar = true
offset = Vector2(20, 50)
a_btn_title = "USE"
b_btn_title = "CLOSE"
hide_b_btn = true
c_btn_title = "CLOSE"
c_btn_icon = 16
hide_c_btn = false
